[workspace]
members = [".", "src-tauri"]
resolver = "2"

[package]
name = "mhf-installer"
version = "0.1.0"
edition = "2021"
description = "MHF game file verifier, installer and launcher"

[lib]
name = "mhf_installer_core"
path = "src/lib.rs"

[[bin]]
name = "mhf-installer"
path = "src/main.rs"

[dependencies]
anyhow       = "1"
clap         = { version = "4", features = ["derive"] }
hex          = "0.4"
indicatif    = { version = "0.17", features = ["rayon"] }
rayon        = "1"
reqwest      = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sha1         = "0.10"
sha2         = "0.10"
toml         = "0.8"
walkdir      = "2"
zip          = "2"
